--- a/JobsCatalog.Application/JobsCatalog.Application/JobsCatalog.Application.csproj
+++ b/JobsCatalog.Application/JobsCatalog.Application/JobsCatalog.Application.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\Persistance\" />
     <Folder Include="Features\" />
     <Folder Include="DependencyInjection\" />
   </ItemGroup>
@@ -14,6 +13,10 @@
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\JobsCataologDomain\JobsCataologDomain\JobsCatalog.Domain.csproj" />
   </ItemGroup>
 
 </Project>
