--- a/JobsCatalogApi/JobsCatalogApi/appsettings.json
+++ b/JobsCatalogApi/JobsCatalogApi/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "JobsCatalogConnection": "Server=(localdb)\\MSSQLLocalDB;Database=JobsCatalog;Trusted_Connection=True;"
+    "JobsCatalogConnection": "Server=host.docker.internal, 1433;Database=JobsCatalog;User Id=sa;Password=yourStrong(!)Password;Integrated Security=false;"
+    //migration docker
+    //"JobsCatalogConnection": "Server=localhost, 1435;Database=JobsCatalog;User Id=sa;Password=yourStrong(!)Password;Integrated Security=false;"
+    //standard localdb
+    //"JobsCatalogConnection": "Server=(localdb)\\MSSQLLocalDB;Database=JobsCatalog;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
